--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Resume - Start Bootstrap Theme</title>
+        <title>William Raymond Revilla</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
@@ -19,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Clarence Taylor</span>
+                <span class="d-block d-lg-none">William Raymond Revilla</span>
                 <!--<span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="" /></span>-->
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -62,19 +62,25 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Research Associate</h3>
-                            <div class="subheading mb-3">Philippine Survey And Research Center</div>
-                            <p>Worked with a team that finished two eye tracking projects in my first months as a research associate. It is the first projects that the company used eye tracking as an initiative for market research making it a challenging task that our team has to improvise on how we could encode and make use of the data.</p>
+                            <h4 class="mb-0">Philippine Survey And Research Center</h4>
+                            <h6 class="mb-0">Pasig City, Philippines</h6>
+                            <p>•  Worked with a team that finished two eye tracking projects in my first months as a research associate. It is the first projects that the company used eye tracking as an initiative for market research making it a challenging task that our team has to improvise on how we could encode and make use of the data.</p>
+                            <p>•  Involved with the sentiment analysis of posts through facebook and twitter regarding COVID-19.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">November 2019 - April 2020</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Intern</h3>
-                            <div class="subheading mb-3">United Laboratories</div>
-                            <p>Firsthand experience in dealing with the heart of a manufacturing plant where I learned actual applications of the boiler and chiller systems used in the industry. o Improved my team player aspect as person.</p>
+                            <h3 class="mb-0">Intern (480 hours)</h3>
+                            <h4 class="mb-0">United Laboratories</h4>
+                            <h6 class="mb-0">Mandaluyong City, Philippines</h6>
+                            <p>•    Firsthand experience in dealing with the heart of a manufacturing plant where I learned actual applications of the boiler and chiller systems used in the industry. o Improved my team player aspect as person.</p>
+                            <p>•   Made schematics for boiler, chiller and compressed air systems for ease of operations where I learned the operations of those systems on the process of doing it and refreshed my autoCAD knowledge.</p>
+                            <p>•   Learned how to manage documents to easily track necessary operations for maintenance such as contracts, calibrations and work orders for an industry.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
-                    </div>
+                        <div class="flex-shrink-0"><span class="text-primary">October 2018 - January 2019</span></div>
+                        </div>
+                    
             
             </section>
             <hr class="m-0" />
@@ -85,16 +91,17 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">De La Salle University</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Mechanical Engineering With Specialization in Mechatronics Engineering</div>
+                            <h4 class="mb-0">Bachelor's Degree</h4>
+                            <h4 class="mb-0">Mechanical Engineering With Specialization in Mechatronics Engineering</h4>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2013 - 2018</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Mother Goose Special Science High School</h3>
+                            <h4 class="mb-0">High School Diploma</h4>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2009 - 2013</span></div>
                     </div>
                 </div>
             </section>
@@ -105,24 +112,19 @@
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
+                        <h4 class="mb-0">Python</h4>
+                        <li class="list-inline-item"><i class="fab fa-python"></i></li>
+                        <h4 class="mb-0">Known python modules:</h4>
+                        <h5 class="mb-0">Pandas</h5>
+                        <h5 class="mb-0">Numpy</h5>
+                        <h5 class="mb-0">Matplotlib/Seaborne</h5>
+                        <h5 class="mb-0">SciKit Learn</h5>
                     </ul>
-                    <div class="subheading mb-3">Workflow</div>
+                    <div class="subheading mb-3">Soft Skills</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
+                            Knowledge in Microsoft Word and Excel
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -144,8 +146,11 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>LAGAY KA DITO</p>
-                    <p class="mb-0">LAGAY DIN</p>
+                    <p>Data Science and Analytics</p>
+                    <p>Engineering</p>
+                    <p>Mathematics</p>
+                    <p>Puzzle-Solving</p>
+                    <p>Fitness</p>
                 </div>
             </section>
             <hr class="m-0" />
