--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#certifications and achievements">Certifications and Ahievements</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests and Hobbies</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#certifications">Certifications</a></li>
                 </ul>
             </div>
         </nav>
@@ -90,6 +90,19 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Eskwelabs</h3>
+                            <h4 class="mb-0">Data Science Fellowship</h4>
+                            <p>Worked with 5 groups in 4 sprints and a final capstone project.   </p>
+                            <p>• Sprint 1: Market Basket Analysis - Primarily worked on identifying support, lift and confidence through EDAs.   </p>
+                            <p>• Sprint 2: Fraud Identification - Feature engineering through EDAs to identify possible factors of fraud and applied classification algorithms to identify fraud transactions.   </p>
+                            <p>• Sprint 3: Spotify Recommender - Hypothetical boosting of an artist with feature engineering to identify genres based on playlists and song features by Spotify to recommend songs and features an artist could leverage to climb Spotify charts.  </p>
+                            <p>• Sprint 4: NLP Education bot for Telegram having history as the assigned subject.</p>
+                            <p>• Capstone project: Focused on the forecasting part where I used the ARIMA and FB prophet model for the Luzon Power Grid</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">2019</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">De La Salle University</h3>
                             <h4 class="mb-0">Bachelor's Degree</h4>
                             <h4 class="mb-0">Mechanical Engineering With Specialization in Mechatronics Engineering</h4>
@@ -128,15 +141,15 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
+                            Feature Engineering with Python
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
+                            Analytical and Logical Thinking
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
+                            Good communicator and listener
                         </li>
                     </ul>
                 </div>
@@ -146,22 +159,26 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Data Science and Analytics</p>
-                    <p>Engineering</p>
-                    <p>Mathematics</p>
-                    <p>Puzzle-Solving</p>
-                    <p>Fitness</p>
+                    <p>Data Science and Analytics - Making simple but meaningful visualizations is an art where I found the interest for data science.</p>
+                    <p>Engineering - Knowing how the world works fuels my curiosity and leads to different ideas!</p>
+                    <p>Mathematics - Everything is quantifiable, knowing how things are quantified shows me the relationship on how the world works!</p>
+                    <p>Puzzle-Solving - One of the best brain stimulating and time passing activities for me.</p>
+                    <p>Fitness - I'm also interested in keeping my overall health the best way it can be.</p>
                 </div>
             </section>
             <hr class="m-0" />
             <!-- Awards-->
-            <section class="resume-section" id="awards">
+            <section class="resume-section" id="certifications">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            August 2019 - Mechanical Engineering Board Exam Passer
+                    <h2 class="mb-5">Certifications</h2>
+                    <ul class="fa-ul mb-0"></ul>
+                    <li>
+                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                        Foundations of Data Science - De La Salle University 
+                        </li>
+                    <li>
+                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                        August 2019 Mechanical Engineering Board Exam Passer
                         </li>
                     </ul>
                 </div>
